<resources>
    <string name="app_name" translatable="false">MemoryMatcher</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="developedBy">Developed By Jed York</string>
    <string name="emailAddress" translatable="false">jyorkcar@sbcglobal.net</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!-- Titles of fragments and activities -->
    <string name="two_by_two_title">Match 2</string>
    <string name="three_by_three_title">Match 3</string>
    <string name="four_by_four_title">Match 2</string>
    <string name="tutorial_title">Tutorial</string>
    <string name="highscores_title">High Scores</string>
    <string name="about_title">About</string>

    <!-- Game Tutorial -->
    <string name="tutorial_menu">Slide-in the menu at left of screen.  Choose game size.  e.g.  2x2.</string>
    <string name="tutorial_gametype">Two different modes of play:  Match 2 and Match 3.  Note that only 3x3 plays "Match 3."  In Match 3, you must match 3 images to score points.  In Match 2, you must match only 2 images to score points.</string>
    <string name="tutorial_titlematch2">Title Match 2.</string>
    <string name="tutorial_titlematch3">Title Match 3.</string>
    <string name="tutorial_titledescription">After game size is selected title shows.</string>


    <!-- Navigation Drawer Labels -->
    <string name="nav_twotwo">2x2</string>
    <string name="nav_threethree">3x3</string>
    <string name="nav_fourfour">4x4</string>
    <string name="nav_fourfive">4x5</string>
    <string name="nav_eightfour">4x8</string>
    <string name="nav_sixsix">6x6</string>
    <string name="nav_tutorial">Tutorial</string>
    <string name="nav_highscores">High Scores</string>
    <string name="nav_about">About</string>

    <!-- Info for About -->
    <string name="about_info">This app was created with Android Studio.</string>


    <!-- stat panel at the bottom of the board & Score is used on GameOver Dialog -->
    <string name="match_count">Match Count:</string>
    <string name="score">Score:</string>
    <string name="timer">Time:</string>


    <!-- various button labels -->
    <string name="restart_button">Restart</string>
    <string name="watch_button">Watch</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="tutorial_button">Tutorial</string>

    <!-- High Score Column Headers -->
    <string name="rank_header">Rank</string>
    <string name="name_header">Name</string>
    <string name="score_header">Score</string>

    <!-- High Score collect username -->
    <string name="name_label">Enter Name:</string>

    <!-- Delete DB -->
    <string name="delete_db">Delete All Scores</string>

    <!-- Welcome message when app is first displayed -->
    <string name="welcome">Welcome!</string>
    <string name="intro">Use the slide-in menu at left to get started.</string>

    <!-- GameOver message -->
    <string name="gameover">Game Over!</string>

    <!-- GO! message -->
    <string name="go_label">GO!</string>
    <string name="play_button">Play</string>



</resources>
