<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menuMain"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_2by2"

            android:title="@string/nav_twotwo" />
        <item
            android:id="@+id/nav_3by3"

            android:title="@string/nav_threethree" />
        <item
            android:id="@+id/nav_4by4"

            android:title="@string/nav_fourfour" />
        <item
            android:id="@+id/nav_4by5"

            android:title="@string/nav_fourfive"
            android:visible="false" />
        <item
            android:id="@+id/nav_4by8"

            android:title="@string/nav_eightfour"
            android:visible="false" />
        <item
            android:id="@+id/nav_6by6"

            android:title="@string/nav_sixsix"
            android:visible="false" />
        <item
            android:id="@+id/nav_tutorial"

            android:title="@string/nav_tutorial"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/nav_highscores"

            android:title="@string/nav_highscores"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/nav_about"

            android:title="@string/nav_about"
            app:showAsAction="ifRoom" />
    </group>

</menu>
