<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myWhite"
    android:visibility="visible"
    tools:context="com.amdone.amd.memorymatcher.fragments.TutorialFragment"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/myDarkGray"
                android:lines="2"
                android:text="@string/tutorial_menu"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageViewTutMenu"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/tut_menu"
                tools:ignore="ContentDescription" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/myDarkGray"
                android:text="@string/tutorial_titledescription"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <ImageView
                android:id="@+id/imageViewMatch2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/tut_match2"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/myDarkGray"
                android:lines="2"
                android:text="@string/tutorial_titlematch2"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageViewMatch3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/tut_match3"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/myDarkGray"
                android:lines="2"
                android:text="@string/tutorial_titlematch3"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <ImageView
                android:id="@+id/imageView2by2"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/tut_2b2"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textView238778"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/myDarkGray"
                android:text="@string/tutorial_gametype"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
